<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/transaparent_black"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"/>

        <View
            android:id="@+id/separator_fade"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_4"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/container"
            android:orientation="horizontal"
            android:background="@color/white"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/radio_button_selector"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/prefix_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_80"
                android:text="@string/currency_dollar"
                android:textSize="16sp"
                app:autoSizeTextType="uniform"/>


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_80"
                android:textSize="16sp"
                android:background="@null"
                android:hint="@string/from"
                android:inputType="numberDecimal"
                android:visibility="gone"
                app:autoSizeTextType="uniform"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/postfix_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_80"
                android:visibility="gone"
                android:text="@string/currency_dollar_postfix"
                android:textSize="16sp"
                app:autoSizeTextType="uniform"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/manual_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_80"
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:visibility="gone"
                android:text="@string/fuel_manual_price_limit"
                app:autoSizeTextType="uniform"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/edit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black_80"
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:text="@string/edit"
                android:visibility="gone"
                app:autoSizeTextType="uniform"/>

        </LinearLayout>

        <View
            android:id="@+id/separator_fade_1"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="1dp"
            android:background="@color/black_4"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pre_auth_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:padding="16dp"
            android:drawablePadding="12dp"
            android:visibility="gone"
            android:drawableLeft="@drawable/ic_error_outline_24px"
            android:text="@string/pre_auth_warning_tip"/>
    </LinearLayout>
</layout>